--- a/ansible/roles/terminal/templates/.zshrc.j2
+++ b/ansible/roles/terminal/templates/.zshrc.j2
@@ -1,3 +1,5 @@
+{{ ansible_managed | comment }}
+
 # Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
 # Initialization code that may require console input (password prompts, [y/n]
 # confirmations, etc.) must go above this block; everything else may go below.
@@ -9,48 +11,15 @@ fi
 # export PATH=$HOME/bin:/usr/local/bin:$PATH
 
 # Path to your oh-my-zsh installation.
-export ZSH="${HOME}/.oh-my-zsh"
+export ZSH="$HOME/.oh-my-zsh"
 
 # Set name of the theme to load --- if set to "random", it will
 # load a random theme each time oh-my-zsh is loaded, in which case,
 # to know which specific one was loaded, run: echo $RANDOM_THEME
 # See https://github.com/ohmyzsh/ohmyzsh/wiki/Themes
-ZSH_THEME="powerlevel10k/powerlevel10k"
+ZSH_THEME={% if oh_my_zsh_theme == 'powerlevel10k' %}"powerlevel10k/powerlevel10k"{% else %}"{{ oh_my_zsh_theme }}"{% endif %}
 
-
-# WSL specific
-if [[ -v WSL_DISTRO_NAME ]] then
-	# Turn off all beeps
-	# unsetopt BEEP
-	# Turn off autocomplete beeps
-	unsetopt LIST_BEEP
-
-	alias ex=/mnt/c/Windows/explorer.exe # OPen explorer on windows ex <directory>
-
-fix_wsl2_interop() {
-    for i in $(pstree -np -s $$ | grep -o -E '[0-9]+'); do
-        if [[ -e "/run/WSL/${i}_interop" ]]; then
-            export WSL_INTEROP=/run/WSL/${i}_interop
-        fi
-    done
-}
-
-	# Copy .ssh
-	upd_ssh(){ # from Windows uaer folder .ssh to  ~/.ssh
-#		test -d ~/.ssh && rm -rf ~/.ssh
-#		/bin/cp -rf "/mnt/c/Users/Oliver Heinemann/.ssh" ~/.ssh
-		find ~/.ssh -type f -exec chmod 600 {} +
-	        find ~/.ssh -type f -name "*.pub" -exec chmod 644 {} +
-	        find ~/.ssh -type d -exec chmod 700 {} + 	
-	}
-
-	# Windows Path handling for performance
-#	WIN_PATH=$(echo $PATH | tr ':' '\n' | grep '/mnt/c' | tr '\n' ':' | sed 's/.$//')
-#	export PATH=$(echo $PATH | tr ':' '\n' | grep -v '/mnt/c' | tr '\n' ':' | sed 's/.$//')
-#	zinit wait'3' lucid atinit'export PATH="$PATH:$WIN_PATH"' nocd for /dev/null
-fi
-
-
+POWERLEVEL9K_MODE="nerdfont-complete"
 # Set list of themes to pick from when loading at random
 # Setting this variable when ZSH_THEME=random will cause zsh to load
 # a theme from this variable instead of looking in $ZSH/themes/
@@ -109,7 +78,7 @@ fi
 # Custom plugins may be added to $ZSH_CUSTOM/plugins/
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
-plugins=(git zsh-autosuggestions zsh-dircolors-solarized zsh-syntax-highlighting)
+plugins=({{ oh_my_zsh_plugins | join(' ') }})
 
 source $ZSH/oh-my-zsh.sh
 
@@ -142,3 +111,4 @@ source $ZSH/oh-my-zsh.sh
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
 
+[[ ! -f ~/.zshrc.$USER ]] || source ~/.zshrc.$USER
